--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "cross-env NODE_ENV=prod nuxt build",
-    "start": "cross-env NODE_ENV=prod nuxt start",
+    "start": "cross-env NODE_ENV=prod nuxt start --spa",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
