--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "config": {
     "nuxt": {
-      "host": "0.0.0.0",
+      "host": "localhost",
       "port": "3333"
     }
   },
