--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
     "mavon-editor": "^2.6.17",
-    "nuxt": "latest",
+    "nuxt": "^1.4.2",
     "vue": "latest",
     "vue-core-image-upload": "^2.4.11",
     "vue-countupjs": "^1.0.0",
