--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "imperfectFuture",
+  "name": "imperfectfuture",
   "version": "1.0.0",
   "description": "imperfect future blog",
   "author": "joe green",
-  "private": false,
+  "private": true,
   "config": {
     "nuxt": {
       "host": "localhost",
@@ -12,39 +12,22 @@
   },
   "scripts": {
     "dev": "nuxt",
-    "build": "cross-env NODE_ENV=production nuxt build",
-    "start": "cross-env NODE_ENV=production nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "build": "nuxt build",
+    "start": "nuxt start"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "@nuxtjs/axios": "^5.5.4",
     "cookieparser": "^0.1.0",
-    "cross-env": "^5.1.5",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
-    "mavon-editor": "^2.6.17",
-    "nuxt": "^1.4.2",
-    "vue": "^2.6.0",
+    "mavon-editor": "^2.7.4",
+    "nuxt": "^2.8.1",
     "vue-core-image-upload": "^2.4.11",
     "vue-countupjs": "^1.0.0",
-    "vue-cropper": "^0.3.6",
-    "vue-infinite-loading": "^2.3.1",
-    "vue-lazyload": "^1.2.3",
-    "vue-multiple-back-top": "^1.0.2",
-    "vue-server-renderer": "^2.6.0",
-    "vue-template-compiler": "^2.6.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "less": "^3.0.2",
-    "less-loader": "^4.1.0"
+    "vue-cropper": "^0.3.9",
+    "vue-infinite-loading": "^2.4.4",
+    "vue-lazyload": "^1.2.6",
+    "vue-multiple-back-top": "^1.0.2"
   }
 }
