--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
     "mavon-editor": "^2.7.4",
+    "net": "^1.0.2",
     "nuxt": "^2.8.1",
     "vue-core-image-upload": "^2.4.11",
     "vue-countupjs": "^1.0.0",
