--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.5.4",
-    "axios": "^0.18.0",
+    "@nuxtjs/axios": "^5.12.0",
+    "axios": "^0.19.2",
+    "bootstrap-vue": "^2.15.0",
+    "cookie-universal-nuxt": "^2.1.4",
     "cookieparser": "^0.1.0",
-    "js-cookie": "^2.2.0",
-    "js-md5": "^0.7.3",
-    "mavon-editor": "^2.7.4",
-    "net": "^1.0.2",
-    "nuxt": "^2.8.1",
+    "mavon-editor": "^2.9.0",
+    "nuxt": "^2.13.3",
+    "vue": "^2.6.11",
     "vue-core-image-upload": "^2.4.11",
     "vue-countupjs": "^1.0.0",
-    "vue-cropper": "^0.3.9",
-    "vue-infinite-loading": "^2.4.4",
-    "vue-lazyload": "^1.2.6",
+    "vue-cropper": "^0.5.5",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-lazyload": "^1.3.3",
     "vue-multiple-back-top": "^1.0.2"
   }
 }
